@@ -16,11 +16,13 @@
 
 package com.jayway.restassured
 
+import com.jayway.restassured.authentication.ExplicitNoAuthScheme
 import com.jayway.restassured.builder.RequestSpecBuilder
 import com.jayway.restassured.builder.ResponseSpecBuilder
 import com.jayway.restassured.filter.Filter
 import com.jayway.restassured.filter.FilterContext
 import com.jayway.restassured.internal.SpecificationMerger
+import com.jayway.restassured.internal.filter.FormAuthFilter
 import com.jayway.restassured.parsing.Parser
 import com.jayway.restassured.response.Response
 import com.jayway.restassured.specification.FilterableRequestSpecification
@@ -32,12 +34,6 @@ import static java.util.Arrays.asList
 import static org.hamcrest.Matchers.equalTo
 import static org.junit.Assert.assertFalse
 import static org.junit.Assert.assertTrue
-import com.jayway.restassured.internal.RequestSpecificationImpl
-import com.jayway.restassured.authentication.FormAuthScheme
-import com.jayway.restassured.authentication.BasicAuthScheme
-import com.jayway.restassured.authentication.NoAuthScheme
-import com.jayway.restassured.internal.filter.FormAuthFilter
-import com.jayway.restassured.authentication.ExplicitNoAuthScheme
 
 class SpecificationMergerTest {
 
